refactor: rename/move models and dtos
