# ipcmanview-station/src/bin/gen-openapi.rs
@@ -4,24 +4,24 @@ use utoipa::OpenApi;
 
 #[derive(OpenApi)]
 #[openapi(components(schemas(
-    ipcmanview::models::Camera,                         // Camera
-    ipcmanview::models::ShowCamera,                     // CameraShow
-    ipcmanview::models::CameraDetail,                   // CameraDetail
-    ipcmanview::models::CameraSoftware,                 // CameraSoftware
-    ipcmanview::models::CameraLicense,                  // CameraLicense
-    ipcmanview::models::CameraFile,                     // CameraFile
-    ipcmanview::models::PageResultScanCompleted,        // ScanCompletedPageResult
-    ipcmanview::models::QueryCameraFileResult,          // CameraFileQueryResult
-    ipcmanview::models::ScanCompleted,                  // ScanCompleted
-    ipcmanview::models::ScanActive,                     // ScanActive
-    ipcmanview::models::ScanPending,                    // ScanPending
-    ipcmanview::dto::CreateCamera,                      // CreateCameraRequest
-    ipcmanview::dto::UpdateCamera,                      // UpdateCameraRequest
-    ipcmanview_station::models::PageQuery,              // PageQuery
-    ipcmanview_station::models::DateTimeRange,          // DateTimeRange
-    ipcmanview_station::models::TotalFileFilterQuery,   // CameraFileTotalQuery
-    ipcmanview_station::models::FileFilterQuery,        // CameraFileQuery
-    ipcmanview_station::models::Total                   // TotalQueryResult
+    ipcmanview::models::Camera,
+    ipcmanview::models::CameraShow,
+    ipcmanview::models::CameraDetail,
+    ipcmanview::models::CameraSoftware,
+    ipcmanview::models::CameraLicense,
+    ipcmanview::models::CameraFile,
+    ipcmanview::models::ScanCompletedPageResult,
+    ipcmanview::models::CameraFileQueryResult,
+    ipcmanview::models::ScanCompleted,
+    ipcmanview::models::ScanActive,
+    ipcmanview::models::ScanPending,
+    ipcmanview::models::CreateCameraRequest,
+    ipcmanview::models::UpdateCameraRequest,
+    ipcmanview_station::dto::PageQuery,
+    ipcmanview_station::dto::DateTimeRange,
+    ipcmanview_station::dto::CameraFileTotalQuery,
+    ipcmanview_station::dto::CameraFileQuery,
+    ipcmanview_station::dto::TotalQueryResult
 )))]
 struct ApiDoc;
 
